# movie-recsys

./: .dockerignore  .gitignore  Dockerfile.api  LICENSE  Makefile  README.md  RESULTS.md  SECURITY.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py  recommender.py  schemas.py
artifacts/: metrics.json
data/: download.py
docs/superpowers/plans/: 2026-06-03-movie-recsys.md
docs/superpowers/specs/: 2026-06-03-movie-recsys-design.md
eval/: evaluate.py  featbuild.py  metrics.py
output/doc/: movie-recsys-technical-deep-dive.docx
pipeline/: build_genome_pivot.py  item_features.py  split.py  user_features.py
scripts/: _build_study_guide.js  build_study_guide.py  dev_serve.py
tests/: test_api.py  test_featbuild.py  test_features.py  test_metrics.py  test_split.py
train/: baselines.py  ranker.py  retrieval.py
ui/: app.js  index.html  nginx.conf  style.css
