[project]
name = "movie-recsys"
version = "0.1.0"
description = "Two-stage movie recommender: ALS+Faiss retrieval, LightGBM LambdaRank re-rank"
requires-python = ">=3.11,<3.12"
dependencies = [
    "polars>=1.0",
    "pandas>=2.2",
    "pyarrow>=16",
    "numpy>=1.26,<2.0",
    "scipy>=1.13",
    "implicit>=0.7.2",
    "lightgbm>=4.3",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "joblib>=1.4",
    "python-docx>=1.1",
    "requests>=2.32",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
